[package]
name = "prometheus-pmbus-exporter"
version = "0.1.0"
edition = "2021"
author = "Andriy Zasypkin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.12", features = ["cargo", "env"] }
i2cdev = "0.5.1"
prometheus = "0.13.1"
prometheus_exporter = "0.8.4"
